--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Lester Liam
-# logo: /assets/img/logo.png
+logo: /assets/linkedin_headshot.jpg
 # description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 theme: jekyll-theme-minimal
